# tool2schema

./: .flake8  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  tool2schema__init__.py
.github/workflows/: python-package.yml  python-publish.yml
gpt2schema/: __init__.py  schema.py
tests/: functions.py  test_load.py  test_parse.py  test_schema.py  test_type_schema.py
tool2schema/: __init__.py  config.py  parameter_schema.py  parse.py  schema.py  type_schema.py
