[tool.poetry]
name = "gpt2schema"
version = "0.1.0"
description = "A library to generate function schemas for use in the OpenAI API."
authors = ["Angus Stewart <siliconlad@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
