[tool.poetry]
name = "tool2schema"
version = "v0.6.0"
description = "A library to generate function schemas for use in the OpenAI API."
authors = ["Angus Stewart <siliconlad@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository="https://github.com/cadifyai/tool2schema"
keywords=["openai", "llm"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
